--- a/Mentoria.Api/Mentoria.Api/appsettings.Development.json
+++ b/Mentoria.Api/Mentoria.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MyConnection": "Data Source=mydb.db;Version=3;FailIfMissing=True;"
   }
 }
