--- a/Mentoria.Infrastructure/Mentoria.Infrastructure.csproj
+++ b/Mentoria.Infrastructure/Mentoria.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,11 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.15" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Mentoria.Application\Mentoria.Application.csproj" />
     <ProjectReference Include="..\Mentoria.Domain\Mentoria.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Respositories\" />
   </ItemGroup>
 
 </Project>
