--- a/Mentoria.Application/Mentoria.Application.csproj
+++ b/Mentoria.Application/Mentoria.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\Mentoria.Domain\Mentoria.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="OneOf" Version="3.0.243" />
+  </ItemGroup>
+
 </Project>
