--- a/Mentoria.Infrastructure/Mentoria.Infrastructure.csproj
+++ b/Mentoria.Infrastructure/Mentoria.Infrastructure.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.15" />
+    <PackageReference Include="OneOf" Version="3.0.243" />
   </ItemGroup>
 
   <ItemGroup>
