--- a/Mentoria.Api/Mentoria.Api/appsettings.Development.json
+++ b/Mentoria.Api/Mentoria.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MyConnection": "Data Source=mydb.db;Version=3;FailIfMissing=True;"
+    "MyConnection": "Data Source=mydb.db;"
   }
 }
