--- a/Mentoria.Api/Mentoria.Api/appsettings.json
+++ b/Mentoria.Api/Mentoria.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MyConnection": "Data Source=mydb.db"
+  },
   "AllowedHosts": "*"
 }
