--- a/Mentoria.Application/Mentoria.Application.csproj
+++ b/Mentoria.Application/Mentoria.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="OneOf" Version="3.0.243" />
   </ItemGroup>
