--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,12 +13,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    steps:
-    - working-directory: ./Mentoria.Api
+    defaults:
+      run:
+        working-directory: ./Mentoria.Api    
+    steps:  
     - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+    - name: Setup .NET         
+      uses: actions/setup-dotnet@v3     
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
